--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="sincronizar">Sincronizar</string>
-
+    <string name="clean_base">Limpar Base</string>
 </resources>
