--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="action_settings">Settings</string>
     <string name="sincronizar">Sincronizar</string>
     <string name="clean_base">Limpar Base</string>
+    <string name="title_activity_swipe_question_resolution">SwipeQuestionResolutionActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
