--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,10 +4,18 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Bem vindo ao Bizu Questões</string>
     <string name="action_settings">Settings</string>
     <string name="sincronizar">Sincronizar</string>
     <string name="clean_base">Limpar Base</string>
     <string name="title_activity_swipe_question_resolution">SwipeQuestionResolutionActivity</string>
-    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="section_format">Bem vindo ao Bizu Questões %1$d</string>
+
+
+
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+
 </resources>
